--- a/app/views/dashboard/monitor.html.erb
+++ b/app/views/dashboard/monitor.html.erb
@@ -1,209 +1,13 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
-<style>
-
-body {
-  font: 10px sans-serif;
-}
-
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
-}
-
-.x.axis path {
-  display: none;
-}
-
-.line {
-  fill: none;
-  stroke: steelblue;
-  stroke-width: 1.5px;
-}
-
-@import url(http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700);
-
-body {
-  font-family: "Helvetica Neue";
-  margin: 40px auto;
-  width: 960px;
-  min-height: 2000px;
-}
-
-#body {
-  position: relative;
-}
-
-footer {
-  padding: 2em 0 1em 0;
-  font-size: 12px;
-}
-
-h1 {
-  font-size: 96px;
-  margin-top: .3em;
-  margin-bottom: 0;
-}
-
-h1 + h2 {
-  margin-top: 0;
-}
-
-h2 {
-  font-weight: 400;
-  font-size: 28px;
-}
-
-h1, h2 {
-  font-family: "Yanone Kaffeesatz";
-  text-rendering: optimizeLegibility;
-}
-
-#body > p {
-  line-height: 1.5em;
-  width: 640px;
-  text-rendering: optimizeLegibility;
-}
-
-#charts {
-  padding: 10px 0;
-}
-
-.Max{
-}
-
-.Min{
-}
-
-.Avg{
-}
-
-.hidden { 
-display: none; 
-}
-.chart {
-  display: inline-block;
-  height: 151px;
-  margin-bottom: 20px;
-}
-
-.reset {
-  padding-left: 1em;
-  font-size: smaller;
-  color: #ccc;
-}
-
-.background.bar {
-  fill: #ccc;
-}
-
-.foreground.bar {
-  fill: steelblue;
-}
-
-.axis path, .axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
-}
-
-.axis text {
-  font: 10px sans-serif;
-}
-
-.brush rect.extent {
-  fill: steelblue;
-  fill-opacity: .125;
-}
-
-.brush .resize path {
-  fill: #eee;
-  stroke: #666;
-}
-
-#hour-chart {
-  width: 260px;
-}
-
-#delay-chart {
-  width: 230px;
-}
-
-#distance-chart {
-  width: 420px;
-}
-
-#date-chart {
-  width: 920px;
-}
-
-#flight-list {
-  min-height: 1024px;
-}
-
-#flight-list .date,
-#flight-list .day {
-  margin-bottom: .4em;
-}
-
-#flight-list .flight {
-  line-height: 1.5em;
-  background: #eee;
-  width: 640px;
-  margin-bottom: 1px;
-}
-
-#flight-list .time {
-  color: #999;
-}
-
-#flight-list .flight div {
-  display: inline-block;
-  width: 100px;
-}
-
-#flight-list div.distance,
-#flight-list div.delay {
-  width: 160px;
-  padding-right: 10px;
-  text-align: right;
-}
-
-#flight-list .early {
-  color: green;
-}
-
-aside {
-  position: absolute;
-  left: 740px;
-  font-size: smaller;
-  width: 220px;
-}
-
-</style>
 <div id="option">
     <input type="checkbox" checked="checked" class="messageCheckbox" value="Max"/>Maximum
-    <input type="checkbox"  checked="checked" class="messageCheckbox" value="Min"/>Minimum
-    <input type="checkbox" checked="checked"  class="messageCheckbox" id="AVG" value="Average""/>Average
-    <input type="checkbox" checked="checked"  class="messageCheckbox" id="USER" value="User""/>User
+    <input type="checkbox" checked="checked" class="messageCheckbox" value="Min"/>Minimum
+    <input type="checkbox" checked="checked"  class="messageCheckbox" id="AVG" value="Average"/>Average
+    <input type="checkbox" checked="checked"  class="messageCheckbox" id="USER" value="User"/>User
 </div>
-
-<div id="body">
-
-
-</div>
-
-<script src="crossfilter.js"></script>
-<script src="d3.v3.min.js"></script>
-
-
 
 <script>
 
 var parseTimestamp = d3.time.format("%Y-%m-%d %H:%M:%S").parse;
-
 
 var margin = {top: 20, right: 80, bottom: 30, left: 50},
     width = 960 - margin.left - margin.right,
@@ -236,8 +40,7 @@ var svg = d3.select("body").append("svg")
   .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-
-d3.csv("1.csv", function(error, data) {
+d3.json("/dashboard/data.json?user_id=1&limit=100", function(error, data) {
   color.domain(d3.keys(data[0]).filter(function(key) { return key !== "Timestamp"; }));
 
   data.forEach(function(d) {
@@ -245,7 +48,7 @@ d3.csv("1.csv", function(error, data) {
     d.Min = +d.Min;
     d.Max = +d.Max;
     d.Average = +d.Average;
-    d.User = +d.User;
+    d.Value = +d.Value;
   });
 
   var cities = color.domain().map(function(name) {
@@ -302,6 +105,5 @@ d3.selectAll('.messageCheckbox').on('click', function () {
         checked = this.checked;
     d3.select('.' + value).classed('hidden', !checked);
 });
-
 
 </script>
