--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,5 +10,8 @@
  *
  *= require_self
  *= require_tree .
- */
+ 
+ *= require jquery.ui.all
  *= require rickshaw
+ *= require rickshaw_extensions
+ */
