Title made simpler

--- a/app/views/dashboard/monitor.html.erb
+++ b/app/views/dashboard/monitor.html.erb
@@ -1,7 +1,7 @@
 <div id="content">
-
+<h1>User's Energy Consumption Value vs Average, Max &amp; Min</h1>
+<br><br><br>
   <form id="side_panel">
-    <h1>User's Energy Consumption Value vs Average, Maximum, Minimum Another Chart</h1>
     <section><div id="legend"></div></section>
     <section>
       <div id="renderer_form" class="toggler">
