Adding twitter bootstrap

--- a/app/views/stats/show.html.erb
+++ b/app/views/stats/show.html.erb
@@ -1,24 +1,27 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Stat -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Timestamp:</strong>
-  <%= @stat.timestamp %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:timestamp) %>:</strong></dt>
+  <dd><%= @stat.timestamp %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:average) %>:</strong></dt>
+  <dd><%= @stat.average %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:maximum) %>:</strong></dt>
+  <dd><%= @stat.maximum %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:minimum) %>:</strong></dt>
+  <dd><%= @stat.minimum %></dd>
+</dl>
 
-<p>
-  <strong>Average:</strong>
-  <%= @stat.average %>
-</p>
-
-<p>
-  <strong>Maximum:</strong>
-  <%= @stat.maximum %>
-</p>
-
-<p>
-  <strong>Minimum:</strong>
-  <%= @stat.minimum %>
-</p>
-
-<%= link_to 'Edit', edit_stat_path(@stat) %> |
-<%= link_to 'Back', stats_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              stats_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_stat_path(@stat), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              stat_path(@stat),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
