--- a/app/views/stats/_form.html.erb
+++ b/app/views/stats/_form.html.erb
@@ -1,33 +1,32 @@
-<%= form_for(@stat) do |f| %>
-  <% if @stat.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@stat.errors.count, "error") %> prohibited this stat from being saved:</h2>
-
-      <ul>
-      <% @stat.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @stat, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :timestamp, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :timestamp, :class => 'text_field' %>
     </div>
-  <% end %>
+  </div>
+  <div class="control-group">
+    <%= f.label :average, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :average, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :maximum, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :maximum, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :minimum, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :minimum, :class => 'text_field' %>
+    </div>
+  </div>
 
-  <div class="field">
-    <%= f.label :timestamp %><br>
-    <%= f.number_field :timestamp %>
-  </div>
-  <div class="field">
-    <%= f.label :average %><br>
-    <%= f.number_field :average %>
-  </div>
-  <div class="field">
-    <%= f.label :maximum %><br>
-    <%= f.number_field :maximum %>
-  </div>
-  <div class="field">
-    <%= f.label :minimum %><br>
-    <%= f.number_field :minimum %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                stats_path, :class => 'btn' %>
   </div>
 <% end %>
