--- a/app/views/stats/edit.html.erb
+++ b/app/views/stats/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing stat</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @stat %> |
-<%= link_to 'Back', stats_path %>
+<%- model_class = Stat -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
