--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -1,33 +1,42 @@
-<h1>Listing stats</h1>
-
-<table>
+<%- model_class = Stat -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Timestamp</th>
-      <th>Average</th>
-      <th>Maximum</th>
-      <th>Minimum</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:timestamp) %></th>
+      <th><%= model_class.human_attribute_name(:average) %></th>
+      <th><%= model_class.human_attribute_name(:maximum) %></th>
+      <th><%= model_class.human_attribute_name(:minimum) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @stats.each do |stat| %>
       <tr>
+        <td><%= link_to stat.id, stat_path(stat) %></td>
         <td><%= stat.timestamp %></td>
         <td><%= stat.average %></td>
         <td><%= stat.maximum %></td>
         <td><%= stat.minimum %></td>
-        <td><%= link_to 'Show', stat %></td>
-        <td><%= link_to 'Edit', edit_stat_path(stat) %></td>
-        <td><%= link_to 'Destroy', stat, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= stat.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_stat_path(stat), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      stat_path(stat),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-<%= will_paginate @stats %>
-<%= link_to 'New Stat', new_stat_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_stat_path,
+            :class => 'btn btn-primary' %>
