--- a/app/views/usage/index.html.erb
+++ b/app/views/usage/index.html.erb
@@ -1,31 +1,40 @@
-<h1>Listing usage</h1>
-
-<table>
+<%- model_class = Usage -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>User</th>
-      <th>Timestamp</th>
-      <th>Value</th>     
-      <th></th>
-      <th></th>
-      <th></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:timestamp) %></th>
+      <th><%= model_class.human_attribute_name(:value) %></th>
+      <th><%= model_class.human_attribute_name(:user_id) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @usage.each do |usage| %>
       <tr>
-        <td><%= usage.user_id %></td>
+        <td><%= link_to usage.id, usage_path(usage) %></td>
         <td><%= usage.timestamp %></td>
         <td><%= usage.value %></td>
-        <td><%= link_to 'Show', usage %></td>
-        <td><%= link_to 'Edit', edit_usage_path(usage) %></td>
-        <td><%= link_to 'Destroy', usage, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= usage.user_id %></td>
+        <td><%= usage.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_usage_path(usage), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      usage_path(usage),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-<%= will_paginate @usage %>
-<%= link_to 'New Usage', new_usage_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_usage_path,
+            :class => 'btn btn-primary' %>
