--- a/app/views/usage/new.html.erb
+++ b/app/views/usage/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New usage</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', usage_index_path %>
+<%- model_class = Usage -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
