--- a/app/views/usage/show.html.erb
+++ b/app/views/usage/show.html.erb
@@ -1,19 +1,25 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Usage -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>User_id:</strong>
-  <%= @usage.user_id %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:timestamp) %>:</strong></dt>
+  <dd><%= @usage.timestamp %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:value) %>:</strong></dt>
+  <dd><%= @usage.value %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
+  <dd><%= @usage.user_id %></dd>
+</dl>
 
-<p>
-  <strong>Timestamp:</strong>
-  <%= @usage.timestamp %>
-</p>
-
-<p>
-  <strong>Value:</strong>
-  <%= @usage.value %>
-</p>
-
-<%= link_to 'Edit', edit_usage_path(@usage) %> |
-<%= link_to 'Back', usage_index_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              usage_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_usage_path(@usage), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              usage_path(@usage),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
