--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Greenenergymonitor" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : 'Greenenergymonitor' %></title>
     <%= csrf_meta_tags %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -12,7 +12,7 @@
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
     <![endif]-->
 
-    <%= stylesheet_link_tag "application", :media => "all" %>
+    <%= stylesheet_link_tag 'application', :media => 'all' %>
 
     <!-- For third-generation iPad with high-resolution Retina display: -->
     <!-- Size should be 144 x 144 pixels -->
@@ -34,7 +34,7 @@
     <!-- Size should be 32 x 32 pixels -->
     <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
 
-    <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag 'application' %>
   </head>
   <body>
 
@@ -45,19 +45,28 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
           </a>
           <a class="brand" href="/">Green Energy Monitor</a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Users", "/users"  %></li>
-              <li><%= link_to "Usage", "/usage"  %></li>
-              <li><%= link_to "Statistics", "/stats"  %></li>
+              <li><%= link_to 'Usage', '/usage' %></li>
+              <li><%= link_to 'Statistics', '/stats' %></li>
+              <% if user_signed_in? %>
+                  <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
+                  <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+              <% else %>
+                  <li><%= link_to 'Sign up', new_user_registration_path %></li>
+                  <li><%= link_to 'Login', new_user_session_path %></li>
+              <% end %>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
       </div>
     </div>
-
+    <% if user_signed_in? %>
+      Logged in as <strong><%= current_user.email %></strong>.
+    <% end %>
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span">
