--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -11,7 +11,7 @@
       <th><%= model_class.human_attribute_name(:maximum) %></th>
       <th><%= model_class.human_attribute_name(:minimum) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th><%=t '.actions', :default => t('helpers.actions') %></th>
     </tr>
   </thead>
   <tbody>
@@ -24,12 +24,12 @@
         <td><%= stat.minimum %></td>
         <td><%= stat.created_at %></td>
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+          <%= link_to t('.edit', :default => t('helpers.links.edit')),
                       edit_stat_path(stat), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+          <%= link_to t('.destroy', :default => t('helpers.links.destroy')),
                       stat_path(stat),
                       :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :data => { :confirm => t('.confirm', :default => t('helpers.links.confirm', :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
         </td>
       </tr>
@@ -37,6 +37,6 @@
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
+<%= link_to t('.new', :default => t('helpers.links.new')),
             new_stat_path,
             :class => 'btn btn-primary' %>
