--- a/app/views/usage/index.html.erb
+++ b/app/views/usage/index.html.erb
@@ -10,7 +10,7 @@
       <th><%= model_class.human_attribute_name(:value) %></th>
       <th><%= model_class.human_attribute_name(:user_id) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th><%=t '.actions', :default => t('helpers.actions') %></th>
     </tr>
   </thead>
   <tbody>
@@ -22,12 +22,12 @@
         <td><%= usage.user_id %></td>
         <td><%= usage.created_at %></td>
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+          <%= link_to t('.edit', :default => t('helpers.links.edit')),
                       edit_usage_path(usage), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+          <%= link_to t('.destroy', :default => t('helpers.links.destroy')),
                       usage_path(usage),
                       :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :data => { :confirm => t('.confirm', :default => t('helpers.links.confirm', :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
         </td>
       </tr>
@@ -35,6 +35,6 @@
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
+<%= link_to t('.new', :default => t('helpers.links.new')),
             new_usage_path,
             :class => 'btn btn-primary' %>
