--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
 
     <%= stylesheet_link_tag 'application', :media => 'all' %>
@@ -38,18 +38,20 @@
   </head>
   <body>
 
-    <div class="navbar navbar-fluid-top">
+    <div class="navbar navbar-top">
       <div class="navbar-inner">
-        <div class="container-fluid">
+        <div class="container">
           <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
+            <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
           <a class="brand" href="/">Green Energy Monitor</a>
-          <div class="container-fluid nav-collapse">
+          <div class="container nav-collapse">
             <ul class="nav">
+              <li><%= link_to 'Upload Green Button Data', '/dashboard/upload' %></li>
               <li><%= link_to 'Usage', '/usage' %></li>
               <li><%= link_to 'Statistics', '/stats' %></li>
               <% if user_signed_in? %>
@@ -67,14 +69,16 @@
     <% if user_signed_in? %>
       Logged in as <strong><%= current_user.email %></strong>.
     <% end %>
-    <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span">
-          <%= bootstrap_flash %>
+    <div class="container">
+      <div class="row">
+        <div class="span9">
           <%= yield %>
         </div>
+        <div class="span3">
+          <h2>About Us</h2>
+          Green energy monitor allows you to monitor and compare your energy consumption.
+        </div>
       </div><!--/row-->
-
       <footer>
         <p>&copy; Green Energy Monitor 2014</p>
       </footer>
